Basic implementation, needing work

--- a/app/assets/stylesheets/base/_base.scss
+++ b/app/assets/stylesheets/base/_base.scss
@@ -47,3 +47,11 @@ a[href^="fax"]:hover {
   text-decoration: none;
   pointer-events: none;
 }
+
+.offcanvas-active {
+  .page-wrap {
+    position: fixed;
+    overflow: hidden;
+  }
+}
+
