Adds proposed styling for "imprint hint", regarding #792

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -42,6 +42,7 @@
 @import "modules/table";
 @import "modules/noscript";
 @import "modules/emailinfo";
+@import "modules/hint";
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
 @import "modules/sections/section-offer";
