--- a/app/assets/stylesheets/mediaqueries/_xl.scss
+++ b/app/assets/stylesheets/mediaqueries/_xl.scss
@@ -156,6 +156,8 @@
   }
 
   .Listing-results__headline--remote {
+    padding-right: 35%;
+
     body.pl &,
     body.fr & {
       padding-right: 45%;
