--- a/app/views/pages/impressum.html.slim
+++ b/app/views/pages/impressum.html.slim
@@ -3,6 +3,12 @@
 
   main.content-main.content-main--wide
     .wrapper-inner
+
+      .hint.hint--imprint
+        .hint__icon.hint__icon--info
+          i.fa.fa-info-circle
+        = t '.notice'
+
       h1 = t '.heading'
 
       p = t 'pages.shared.address.name'
