Manual amend to last hotfix: also apply to largest possible viewport

--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -39,6 +39,7 @@
   @extend %roboto_bold;
   position: relative;
   margin: 0.5em 0;
+  padding-right: 25%;
   font-weight: 400;
   font-size: 20px;
 
