--- a/app/assets/stylesheets/config/_variables.scss
+++ b/app/assets/stylesheets/config/_variables.scss
@@ -22,7 +22,9 @@ $font_color: $brand_brown;
 
 
 $brand_core_family: #af1d3f;
+$brand_core_family_lightened: #D1768A;
 $brand_core_refugees: #006b81;
+$brand_core_refugees_lightened: #63A6B4;
 
 
 // Geometry
