--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -493,6 +493,8 @@
     -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     margin-top: 0;
+    padding-left: 0;
+    padding-right: 0;
     background-color: transparent;
   }
 
