--- a/app/views/layouts/partials/_offcanvas.html.slim
+++ b/app/views/layouts/partials/_offcanvas.html.slim
@@ -1,8 +1,10 @@
 #off-canvas-container.off-canvas-container
-  button.off-canvas-container__trigger
-    span.off-canvas-container__number
-    | Suchergebnisse zeigen
-  .demo
+  .off-canvas-container__top
+    button.off-canvas-container__trigger.off-canvas-container__trigger--within-oc
+      span.off-canvas-container__number
+      | Suchergebnisse zeigen
+    button.off-canvas-container__close.off-canvas-container__trigger aria-label="Close" ×
+  .off-canvas-container__content
     ul.tablist role="tablist" 
       li#tab1.tablist__tab.is-active aria-controls="tab_filter" aria-selected="true" role="tab" tabindex="0"  Filter
       li#tab2.tablist__tab aria-controls="tab_categories" aria-selected="false" role="tab" tabindex="0"  Kategorien
