--- a/app/assets/stylesheets/base/_footer.scss
+++ b/app/assets/stylesheets/base/_footer.scss
@@ -4,6 +4,12 @@
 //
 // ---------------------------------------------------------------
 
+.footer-main {
+  .offcanvas-active & {
+    display: none;
+  }
+}
+
 .footer-main,
 .footer-main__firstrow,
 .footer-main__secondrow {
