Adds swipeleft and fixes z-index bug

--- a/app/assets/stylesheets/base/_offcanvas.scss
+++ b/app/assets/stylesheets/base/_offcanvas.scss
@@ -19,6 +19,7 @@
 .off-canvas-container__top {
   display: flex;
   position: fixed;
+  z-index: 2000; // resolve z-index bug on real mobile devices
   left: 0;
   right: 0;
 }
