--- a/app/assets/stylesheets/base/_offcanvas.scss
+++ b/app/assets/stylesheets/base/_offcanvas.scss
@@ -18,10 +18,13 @@
 
 .off-canvas-container__top {
   display: flex;
-  position: fixed;
   z-index: 2000; // resolve z-index bug on real mobile devices
   left: 0;
   right: 0;
+
+  .offcanvas-active & {
+    position: fixed;
+  }
 }
 
 .off-canvas-container__close {
