--- a/app/assets/stylesheets/form/_filter-form.scss
+++ b/app/assets/stylesheets/form/_filter-form.scss
@@ -13,6 +13,10 @@
   padding: 12px 20px 5px 10px;
   background-color: $brand_beige;
 
+  &.is-visible {
+    display: flex;
+  }
+
   #off-canvas-container & {
     display: block;
   }
@@ -235,30 +239,4 @@
   }
 }
 
-input[type='radio']:after {
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  top: -2px;
-  left: -1px;
-  position: relative;
-  background-color: transparent;
-  content: '';
-  display: inline-block;
-  visibility: visible;
-  border: 2px solid $brand_brown ;
-}
 
-input[type='radio']:checked:after {
-  width: 15px;
-  height: 15px;
-  border-radius: 15px;
-  top: -2px;
-  left: -1px;
-  position: relative;
-  background-color: $brand_brown;
-  content: '';
-  display: inline-block;
-  visibility: visible;
-  border: 2px solid $brand_brown;
-}
