--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -13,7 +13,7 @@
     - cache [@offer, @offer.target_audience_filters.pluck(:id).sort.join(','), @current_section, @locale] do
       .page-detail__stamp[itemscope itemtype='http://schema.org/Audience']
         div[itemprop='name']
-          - stamp_method = @current_section == 'family' ? "_stamp_family" : "_stamp_refugees"
+          - stamp_method = @current_section == 'family' ? "stamp_family" : "stamp_refugees"
           = @offer.send(stamp_method, @locale)
 
     / Left side (in desktop)
