--- a/app/views/subscriptions/shared/_new.html.slim
+++ b/app/views/subscriptions/shared/_new.html.slim
@@ -3,7 +3,7 @@
                   remote: true do |f|
   = f.input :email,
             hint: false,
-            label: false,
+            label: "E-Mail: ",
             input_html: { \
               class: 'newsletter-subscribe__input',
               placeholder: t('.placeholder') }
