Transform screendesign in issue #517 into prototype

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -43,6 +43,7 @@
 @import "modules/noscript";
 @import "modules/emailinfo";
 @import "modules/hint";
+@import "modules/contact-person-matrix";
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
 @import "modules/sections/section-offer";
