Basic desktop implementation, but WIP

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -45,7 +45,7 @@
 @import "modules/emailinfo";
 @import "modules/tablist";
 @import "modules/hint";
-
+@import "modules/section-choice";
 @import "modules/sections/section-content";
 @import "modules/sections/section-start";
 @import "modules/sections/section-offer";
