--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -29,12 +29,11 @@ html class='no-js' lang=I18n.locale
             = render '/layouts/partials/flash',
                      type: message[0],
                      content: message[1]
-      - if controller_name == 'pages' && \
-        %w(home section_choice).include? action_name
+      - if controller_name == 'pages' && action_name == 'home'
         = render 'layouts/partials/navigation',
-                 search_form: SearchForm.new,
-                 current_section: @current_section
-      - else
+                search_form: SearchForm.new,
+                current_section: @current_section
+      - elsif controller_name != 'pages' && action_name != 'section_choice'
         = render 'layouts/partials/search_navigation',
                  search_form: @search_form || SearchForm.new,
                  current_section: @current_section
