for #517 - implement contact people cell

--- a/app/views/offers/show/_who_section.html.slim
+++ b/app/views/offers/show/_who_section.html.slim
@@ -1,5 +1,3 @@
 - if offer.visible_contact_people?
-  section.section-content
-    h3.section-content__title = t '.heading'
-    .section-content__body
-        = render 'offers/show/who_contact_people', offer: offer
+  = cell 'contact_people', offer
+  / render 'offers/show/who_contact_people', offer: offer
