Change color of search results links

--- a/app/assets/stylesheets/modules/_listing-results.scss
+++ b/app/assets/stylesheets/modules/_listing-results.scss
@@ -125,7 +125,7 @@
   font-size: 18px;
 
   a {
-    color: $brand_white;
+    color: $brand_brown
   }
 
   .Listing-results__listitem--highlighted & {
