mini-feature: clarat-org/clarat#863 - always set title as meta og:title as well

--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -4,6 +4,7 @@ html class='no-js' lang=I18n.locale
     meta charset="utf-8"
     title
       = full_title(yield(:title))
+    meta property="og:title" content=full_title(yield(:title))
     - meta_description = yield(:meta_description)
     - if meta_description
       meta name='description' content=meta_description
