--- a/app/assets/stylesheets/modules/_contact-person-matrix.scss
+++ b/app/assets/stylesheets/modules/_contact-person-matrix.scss
@@ -4,8 +4,13 @@
   tr {
     > td {
       &:first-child {
-        border-right: 1px solid #C8BEAB;
+        border-right: 1px solid $brand-grey;
         width: 49%;
+
+        body.ar & {
+          border-left: 1px solid $brand-grey;
+          border-right: none;
+        }
       }
     }
 
@@ -13,6 +18,11 @@
       position: relative;
       width: 48%;
       padding-left: 3%;
+
+      body.ar & {
+        padding-left: 0;
+        padding-right: 3%;
+      }
 
       $triangle_dimension: 10px;
 
@@ -29,6 +39,13 @@
         font-size: 0;
         line-height: 0;
         margin-top: -($triangle_dimension);
+
+        body.ar & {
+          right: 0;
+          left: auto;
+          border-right: $triangle_dimension solid $brand-grey;
+          border-left: 0;
+        }
       }
     }
   }
