Change background color for internet presence #821

--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -7,7 +7,7 @@
 .template--offers-show, .template--previews-show_offer {
 
   .section-content--internet-presence .section-content__title {
-    background: $brand_grey;
+    background: $brand_green;
   }
 
   .section-content--where .section-content__title {
