--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -41,6 +41,7 @@
     / Right side (in desktop)
     .section-wrapper-minor
 
+      / Spoken languages
       section.section-content.section-content--speaking
         h3.section-content__title
           = t '.speaking'
@@ -52,6 +53,16 @@
 
         button.section-content__toggle
           = t '.speaking'
+
+      / More info "tags"
+      section.section-content.section-content--more-info
+        h3.section-content__title Weitere Informationen
+
+        ul.section-content__tag-list
+          li vertraulich
+            <i class="fa fa-info-circle" aria-hidden="true"></i>
+          
+
 
       section.section-content.section-content--whos-offering
         h3.section-content__title
