--- a/app/assets/stylesheets/mediaqueries/_l.scss
+++ b/app/assets/stylesheets/mediaqueries/_l.scss
@@ -274,6 +274,9 @@
     }
   }
 
+  .section-choice__headline {
+    background-size: auto 80%;
+  }
 
   // Footer ######################################
 
