--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -759,6 +759,22 @@
     }
   }
 
+  .section-choice__container {
+    float: none;
+    width: auto;
+    margin-bottom: 2em;
+  }
+
+  .section-choice__headline {
+    height: 100px;
+  }
+
+  .section-choice__cta {
+    height: auto;
+    min-height: 45px;
+  }
+
+
   // Footer ######################################
 
   .nav-site__listitem {
