--- a/app/assets/stylesheets/modules/_section-choice.scss
+++ b/app/assets/stylesheets/modules/_section-choice.scss
@@ -1,9 +1,6 @@
 .section-choice {
-  position: absolute;
+  position: relative;
   width: 1058px;
-  left: 50%;
-  top: 50%;
-  transform: translate(-50%, 0);
   list-style: none;
 }
 
@@ -14,8 +11,8 @@
 }
 
 .section-choice__stage {
-  padding-top: 40%;
-  background: no-repeat center bottom;
+  padding-top: 32%;
+  background: no-repeat center top;
   background-size: 439px 170px;
 }
 
@@ -47,17 +44,17 @@
 .section-choice__cta {
   @extend %clarat_rounding_start;
   @extend %clarat_rounding_end;
-  position: absolute;
-  left: 50%;
+  //position: absolute;
+  //left: 50%;
   width: 493px;
   height: 90px;
-  transform: translate(-50%, -80%);
   background: image-url('skinny-arrow-right.svg') no-repeat 14px center ;
   background-size: 28px 49px;
   color: $brand_white;
   text-decoration: none;
   padding: 7px 7px 7px 55px;
   font-size: 27px;
+  display: inline-block;
 }
 
 .section-choice__cta--refugees {
