--- a/app/views/layouts/application.html.slim
+++ b/app/views/layouts/application.html.slim
@@ -33,7 +33,7 @@ html class='no-js' lang=I18n.locale
         = render 'layouts/partials/navigation',
                 search_form: SearchForm.new,
                 current_section: @current_section
-      - elsif controller_name != 'pages' && action_name != 'section_choice'
+      - elsif controller_name == 'pages' && action_name != 'section_choice'
         = render 'layouts/partials/search_navigation',
                  search_form: @search_form || SearchForm.new,
                  current_section: @current_section
@@ -47,5 +47,3 @@ html class='no-js' lang=I18n.locale
 
     = render 'layouts/partials/general_assets'
     = content_for :view_specific_scripts
-
-        / Todo: #{I18n.locale} instead of "ar"
