--- a/app/assets/stylesheets/modules/_section-choice.scss
+++ b/app/assets/stylesheets/modules/_section-choice.scss
@@ -11,6 +11,7 @@
 }
 
 .section-choice__stage {
+  display: inherit;
   padding-top: 32%;
   background: no-repeat center top;
   background-size: 439px 170px;
@@ -44,14 +45,13 @@
 .section-choice__cta {
   @extend %clarat_rounding_start;
   @extend %clarat_rounding_end;
-  //position: absolute;
-  //left: 50%;
-  width: 493px;
+  width: auto;
   height: 90px;
   background: image-url('skinny-arrow-right.svg') no-repeat 14px center ;
   background-size: 28px 49px;
   color: $brand_white;
   text-decoration: none;
+  margin: 0 28px;
   padding: 7px 7px 7px 55px;
   font-size: 27px;
   display: inline-block;
