--- a/app/views/pages/section_choice.html.slim
+++ b/app/views/pages/section_choice.html.slim
@@ -7,13 +7,13 @@
         section.section-choice__family
           a[href="#"]
             h1.section-choice__headline.section-choice__headline--family = t '.section_choice.family.title'
-          .section-choice__stage.section-choice__stage--family
+          a.section-choice__stage.section-choice__stage--family[href="#"]
           a.section-choice__cta.section-choice__cta--family[href="#"]
-            = t '.section_choice.family.claim'
+            = t 'layouts.partials.navigation.claim.family'
       li.section-choice__container
         section.section-choice__refugees
           a[href="#"]
             h1.section-choice__headline.section-choice__headline--refugees = t '.section_choice.refugees.title'
-          .section-choice__stage.section-choice__stage--refugees
+          a.section-choice__stage.section-choice__stage--refugees[href="#"]
           a.section-choice__cta.section-choice__cta--refugees[href="#"]
-            = t '.section_choice.refugees.claim'
+            = t 'layouts.partials.navigation.claim.refugees'
