Fix for clarat-org/clarat#835 - fixed bug and refactored saved geolocation

--- a/app/views/offers/shared/_search_form.html.slim
+++ b/app/views/offers/shared/_search_form.html.slim
@@ -12,13 +12,10 @@ div.Distributor__search-form
                           autofocus: true,
                           class: 'input-xlg' }
 
-      - search_location_value = \
-        search_form.search_location || cookies[:saved_search_location] || \
-        I18n.t('conf.default_location')
       = f.input :search_location, label: t('.loc_label'), hint: false,
                                   wrapper_html: {class: 'JS-Geolocation__wrapper'},
                                   input_html: { \
-                                    value: search_location_value,
+                                    value: search_form.search_location,
                                     class: 'input-xlg JS-Geolocation__display',
                                     placeholder: t(".loc_placeholder.#{labels}"),
                                     oninvalid: custom_validity_js('fill_field'),
@@ -26,13 +23,10 @@ div.Distributor__search-form
                                     required: true }
 
       / Hidden Fields
-      - geolocation_value = \
-        search_form.generated_geolocation || cookies[:saved_geolocation] || \
-        I18n.t('conf.default_latlng')
       = f.input :generated_geolocation, as: :hidden,
                                         input_html: { \
                                           class: 'JS-Geolocation__input',
-                                          value: geolocation_value }
+                                          value: search_form.generated_geolocation }
       / = f.input :geolocation, as: :hidden
       = f.input :category, as: :hidden
       = f.input :exact_location, as: :hidden
