--- a/app/assets/stylesheets/modules/sections/_section-content.scss
+++ b/app/assets/stylesheets/modules/sections/_section-content.scss
@@ -99,6 +99,32 @@
   cursor: pointer;
   min-height: 30px;
   line-height: 30px;
+  background-image: image-url('ico_fieldset_expand--ondark.svg');
+  background-position: 15px center;
+  background-repeat: no-repeat;
+  position: relative;
+
+  &::after {
+    content: '';
+    position: absolute;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    left: 0;
+    pointer-events: none;
+    background-image: image-url('ico_fieldset_expand--ondark.svg');
+    background-position: calc(100% - 15px) center;
+    background-repeat: no-repeat;
+  }
+
+  .is-expanded + & {
+    background-image: image-url('ico_fieldset_collapse--ondark.svg');
+
+    &::after {
+      background-image: image-url('ico_fieldset_collapse--ondark.svg');
+    }
+
+  }
 }
 
 .offer-contribute {
