Design proposal, needs approval, faking tags

--- a/app/views/offers/show.html.slim
+++ b/app/views/offers/show.html.slim
@@ -59,10 +59,9 @@
         h3.section-content__title Weitere Informationen
 
         ul.section-content__tag-list
-          li vertraulich
-            <i class="fa fa-info-circle" aria-hidden="true"></i>
-          
-
+          li kostenlos
+          li anonym
+          li Tag und Nacht
 
       section.section-content.section-content--whos-offering
         h3.section-content__title
