--- a/app/assets/stylesheets/modules/sections/_section-offer.scss
+++ b/app/assets/stylesheets/modules/sections/_section-offer.scss
@@ -45,18 +45,10 @@
     margin: 4px 15px 10px;
 
     li {
-      border-radius: 5px 0;
       float: left;
       display: inline-block;
-      padding: 5px 3px 7px 7px;
-      border: 1px solid;
-      margin: 6px 6px 0 0;
-      font-size: 82.5%;
-
-      .fa {
-        margin-right: 3px;
-        margin-left: 1px;
-      }
+      border-bottom: 1px dashed;
+      margin: 6px 15px 0 0;
     }
   }
 
