--- a/app/views/layouts/partials/_navigation.html.slim
+++ b/app/views/layouts/partials/_navigation.html.slim
@@ -2,7 +2,7 @@
 
   header.header-main.header-main--wide
     .header-main__foreground.wrapper-inner
-      h1.Logo.Logo--start = link_to 'clarat.org', '/'
+      h1.Logo.Logo--start = link_to 'clarat.org', home_path(current_section)
 
       .Claim
         h2.Claim__firstrow = t '.claim.main'
