--- a/app/views/pages/section_choice.html.slim
+++ b/app/views/pages/section_choice.html.slim
@@ -1,19 +1,21 @@
-- provide(:title, t(".title.#{@current_section}"))
+- provide(:title, t('.title'))
 - cache ['section_choice', I18n.t] do
 
   main.content-main.content-main--wide.content-main--section_choice
     ul.section-choice
       li.section-choice__container
         section.section-choice__family
-          a[href="#"]
-            h1.section-choice__headline.section-choice__headline--family = t '.section_choice.family.title'
-          a.section-choice__stage.section-choice__stage--family[href="#"]
-          a.section-choice__cta.section-choice__cta--family[href="#"]
+          = link_to '/family/' do
+            h1.section-choice__headline.section-choice__headline--family
+              = t '.family.title'
+          a.section-choice__stage.section-choice__stage--family[href='/family/']
+          a.section-choice__cta.section-choice__cta--family[href='/family/']
             = t 'layouts.partials.navigation.claim.family'
       li.section-choice__container
         section.section-choice__refugees
-          a[href="#"]
-            h1.section-choice__headline.section-choice__headline--refugees = t '.section_choice.refugees.title'
-          a.section-choice__stage.section-choice__stage--refugees[href="#"]
-          a.section-choice__cta.section-choice__cta--refugees[href="#"]
+          a[href='/refugees/']
+            h1.section-choice__headline.section-choice__headline--refugees
+              = t '.refugees.title'
+          a.section-choice__stage.section-choice__stage--refugees[href='/refugees/']
+          a.section-choice__cta.section-choice__cta--refugees[href='/refugees/']
             = t 'layouts.partials.navigation.claim.refugees'
