Fix: update clarat_base, added test fixes and views for new city model

--- a/app/views/offers/show/_who_location.html.slim
+++ b/app/views/offers/show/_who_location.html.slim
@@ -9,7 +9,7 @@
     span.street-address= offer.location_street
     br
     span.postal-code=> offer.location_zip
-    span.locality= offer.location_city
+    span.locality= offer.location_city.name
     br
     br
     = t '.organizations'
