--- a/app/assets/stylesheets/modules/sections/_section-organisation.scss
+++ b/app/assets/stylesheets/modules/sections/_section-organisation.scss
@@ -4,7 +4,8 @@
 //
 // ---------------------------------------------------------------
 
-.template--organizations-show, .template--previews-show_organization {
+.template--organizations-show,
+.template--previews-show_organization {
 
   .section-content--who .section-content__title,
   .section-content--where .section-content__title {
