Revert "Basic implementation #762"
This reverts commit d2aaea1996492ef94ead969ec1fda6e98348d590.

--- a/app/assets/stylesheets/mediaqueries/_m.scss
+++ b/app/assets/stylesheets/mediaqueries/_m.scss
@@ -693,10 +693,10 @@
     width: 100%;
   }
 
-  //.Listing-results__orga-display {
-  //  border-top: 2px solid $brand_grey;
-  //  padding-top: 4px;
-  //}
+  .Listing-results__orga-display {
+    border-top: 2px solid $brand_grey;
+    padding-top: 4px;
+  }
 
   .section-team__member {
     width: 49%;
