Fix last commit

--- a/app/assets/stylesheets/modules/_listing-offers.scss
+++ b/app/assets/stylesheets/modules/_listing-offers.scss
@@ -22,5 +22,8 @@
 
 .Listing-offers__address {
   font-size: 13px;
-  padding-bottom: 10px;
+  padding-bottom: 6px;
+  padding-left: 8px;
+  background: $brand_beige;
+  padding-top: 4px;
 }
