--- a/app/views/organizations/show.html.slim
+++ b/app/views/organizations/show.html.slim
@@ -30,20 +30,19 @@
               - unless @organization.offers.approved.in_section(section.identifier).empty?
                 h4.Listing-results__headline--world = t ".headline-offers--#{section.identifier}"
 
-                ul.Listing-offers__list class="Listing--#{section.identifier}"
+                ul.Listing-results__list class="Listing--#{section.identifier}"
                   - @organization.offers.approved.in_section(section.identifier).order('name ASC').each do |offer|
-                    li.Listing-offers__listitem
-                      .Listing-results__stamp
-                        button.Listing-results__expander aria-toggle='false' Expand/Collapse
+                    li.Listing-results__listitem
+
+                      h5.Listing-results__offer.Listing-results__orga-display = link_to offer.name, offer_path(id: offer),
+                              autotranslation_attr(@organization.translation_automated?)
+
+                      .Listing-results__offerinfo.Listing-results__stamp
                         = offer.send("stamp_#{section.identifier}", @current_locale)
-                      .Listing-results__meta.Listing-results__meta--inorga[
-                        class=('Listing-results__meta--with-address' if offer.location && offer.location.visible?)
-                      ]
-                        h5.Listing-results__orga-display = link_to offer.name, offer_path(id: offer),
-                                autotranslation_attr(@organization.translation_automated?)
-                        - if offer.location && offer.location.visible
-                          .Listing-offers__address
-                            = offer.location_address
+                      - if offer.location && offer.location.visible
+                        .Listing-offers__address
+                          = offer.location_address
+
 
 
     .section-wrapper-minor
