--- a/app/assets/stylesheets/modules/sections/_section-content.scss
+++ b/app/assets/stylesheets/modules/sections/_section-content.scss
@@ -98,8 +98,8 @@
   width: 100%;
   cursor: pointer;
   min-height: 30px;
-  line-height: 30px;
-  background-image: image-url('ico_fieldset_expand--ondark.svg');
+  line-height: 27px;
+  padding-bottom: 15px;
   background-position: 15px center;
   background-repeat: no-repeat;
   position: relative;
@@ -107,18 +107,19 @@
   &::after {
     content: '';
     position: absolute;
-    right: 0;
+    right: 50%;
+    transform: translate(50%, 0);
     top: 0;
     bottom: 0;
     left: 0;
     pointer-events: none;
     background-image: image-url('ico_fieldset_expand--ondark.svg');
-    background-position: calc(100% - 15px) center;
+    background-position: center 82%;
     background-repeat: no-repeat;
+    background-size: 15px auto;
   }
 
   .is-expanded + & {
-    background-image: image-url('ico_fieldset_collapse--ondark.svg');
 
     &::after {
       background-image: image-url('ico_fieldset_collapse--ondark.svg');
